--- a/.github/workflows/00-deployment-verification.yml
+++ b/.github/workflows/00-deployment-verification.yml
@@ -12,37 +12,46 @@ jobs:
   deploy-and-test:
     runs-on: ubuntu-latest
 
+    env:
+      NETWORK_ONE: zabbix-network
+      DOCKER_COMPOSE_FILE: zabbix-docker-compose.yml
+      APP_HOSTNAME: dashboard.zabbix.heyvaldemar.net
+      COMPOSE_PROJECT_NAME: zabbix
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Create necessary Docker networks
+        run: |
+          docker network create $NETWORK_ONE || true
 
-    - name: Create necessary Docker networks
-      run: |
-        docker network create zabbix-network || true
+      - name: Start up services using Docker Compose
+        run: docker compose -f $DOCKER_COMPOSE_FILE -p $COMPOSE_PROJECT_NAME up -d
 
-    - name: Start up services using Docker Compose
-      run: docker compose -f zabbix-docker-compose.yml -p zabbix up -d
+      - name: Modify /etc/hosts for internal routing
+        run: |
+          echo "127.0.0.1 $APP_HOSTNAME" | sudo tee -a /etc/hosts
 
-    - name: Modify /etc/hosts for internal routing
-      run: |
-        echo "127.0.0.1 zabbix.heyvaldemar.net" | sudo tee -a /etc/hosts
-        echo "127.0.0.1 dashboard.zabbix.heyvaldemar.net" | sudo tee -a /etc/hosts
+      - name: Print Docker Compose services status
+        run: docker ps
 
-    - name: Print Docker Compose services status
-      run: docker ps
+      - name: Wait for the application to be ready via Traefik
+        run: |
+          echo "Checking the routing and availability of the application via Traefik..."
+          timeout 5m bash -c 'while ! curl -fsSLk "https://$APP_HOSTNAME"; do \
+            echo "Waiting for the application to be ready..."; \
+            sleep 10; \
+          done'
 
-    - name: Wait for the Zabbix dashboard to be ready
-      run: |
-        echo "Checking the routing and availability of application..."
-        timeout 5m bash -c 'while ! curl -fsSLk "http://dashboard.zabbix.heyvaldemar.net"; do echo "Waiting for the application to be ready..."; sleep 10; done'
+      - name: Inspect Network Configuration
+        run: |
+          docker network inspect $NETWORK_ONE
 
-    - name: Inspect Network Configuration
-      run: |
-        docker network inspect zabbix-network
+      - name: Show container logs on failure
+        if: failure()
+        run: docker compose -f $DOCKER_COMPOSE_FILE -p $COMPOSE_PROJECT_NAME logs
 
-    - name: Shutdown Docker Compose services
-      if: always()
-      run: docker compose -f zabbix-docker-compose.yml -p zabbix down
+      - name: Shutdown Docker Compose services
+        if: always()
+        run: docker compose -f $DOCKER_COMPOSE_FILE -p $COMPOSE_PROJECT_NAME down
