--- a/.github/workflows/00-deployment-verification.yml
+++ b/.github/workflows/00-deployment-verification.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Wait for the application to be ready via Traefik
         run: |
           echo "Checking the routing and availability of the application via Traefik..."
-          timeout 5m bash -c 'while ! curl -fsSLk "https://$APP_HOSTNAME"; do \
+          timeout 5m bash -c 'while ! curl -fsSLk "http://$APP_HOSTNAME"; do \
             echo "Waiting for the application to be ready..."; \
             sleep 10; \
           done'
