--- a/zabbix-docker-compose.yml
+++ b/zabbix-docker-compose.yml
@@ -30,6 +30,8 @@ services:
       ZBX_CACHESIZE: ${ZABBIX_CACHESIZE}
     networks:
       - zabbix-network
+    ports:
+      - "10051:10051"
     healthcheck:
       test: grep -qr "zabbix_server" /proc/*/status || exit 1
       interval: 10s
